samples/_failures_safe/1761268631_cb1b09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06723222.c:152:8: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  152 | struct Token parser
      |        ^~~~~
